--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -1,11 +1,22 @@
+.modal-main {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
 .modal-background {
   position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.7);
-  z-index: 10;
+  background: rgba(29, 26, 31, 0.75);
+  padding: 20px 0;
+  z-index: 6;
+
+  width: 100%;
+  height: 100%;
+  align-items: flex-start;
 }
 
 .modal-child {
@@ -13,4 +24,143 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  padding-top: 60px;
+  padding: 50px 30px 40px;
+  border-radius: 10px; 
+  background: #fff;
+
+  display: initial;
+  z-index: 6;
+  flex-basis: auto;
+  width: auto;
+  height: auto;
+  min-height: 400px;
+  margin: auto;
 }
+
+.modal-x {
+  box-sizing: content-box;
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  padding: 20px;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  background-size: 24px 24px;
+  text-align: center;
+  vertical-align: center;
+  color: #6504b5;
+  font-size: 25px;
+  font-weight: bold;
+  font-family: "Nexa Bold", Arial, Helvetica, sans-serif;
+}
+
+.session-container {
+  width: 500px;
+  max-width: 100%;
+  min-height: 400px;
+  margin: 0;
+}
+
+.session-header {
+  font-family: "Nexa Bold", Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: -25px;
+  font-size: 34px;
+  line-height: 1.2;
+  display: block;
+  color: #4d4751;
+  font-weight: inherit;
+  font-style: inherit;
+}
+
+.session-form {
+  display: block;
+  width: 100%;
+  max-width: 340px;
+  margin: auto;
+}
+
+.session-form-field {
+  display: block;
+  position: relative;
+}
+
+.session-form-text {
+  display: inline-block;
+  /* position: absolute; */
+  top: 7px;
+  left: 15px;
+  pointer-events: none;
+}
+
+.session-form-input {
+  position: relative;
+  
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  height: 55px;
+  padding: 22px 15px 2px;
+  border: 1px solid #d2d1d3;
+  border-radius: 5px;
+  appearance: none;
+  font-size: 16px;
+  line-height: normal;
+  transition: border-color .15s;
+  background-color: rgb(232, 240, 254);
+  margin-bottom: 20px;
+}
+
+.session-form-submit {
+  margin: 0;
+  background: transparent;
+  cursor: pointer;
+  box-sizing: border-box;
+  height: 45px;
+  max-width: 100%;
+  border: 2px solid #6504b5;
+  border-radius: 23px;
+  background-color: #6504b5;
+  color: #fff;
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.4;
+
+  margin-bottom: 25px;
+  display: block;
+  width: 100%;
+
+  font-family: Nexa Heavy, Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  
+}
+
+.session-form-redirect {
+  text-align: center;
+  font-size: 16px;
+  font-family: Nexa Heavy, Arial, Helvetica, sans-serif;
+  
+}
+
+.session-form-redirect-link {
+  border: none;
+  background: none;
+  color: #6504b5;
+  text-decoration: underline;
+}
+
+.login-form-demo {
+  text-align: center;
+  font-size: 16px;
+  margin: auto;
+  display: block;
+  text-decoration: underline;
+  color: #6504b5;
+  font-family: Nexa Heavy, Arial, Helvetica, sans-serif;
+  border: none;
+  background: none;
+}
+
