--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,13 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
+    <script type="text/javascript">
+      window.splashURL = "<%= asset_path('splash-image.jpeg') %>"
+      window.logoURL = "<%= asset_path('logo.png') %>"
+      window.favURL = "<%= asset_path('heart-favorited.png') %>"
+      window.unfavURL = "<%= asset_path('heart-unfavorited.png') %>"
+    </script>
   </head>
 
   <body>
