change splash image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,9 @@
     <%= javascript_include_tag 'application' %>
 
     <script type="text/javascript">
-      window.splashURL = "<%= asset_path('splash-image.jpeg') %>"
+      window.splashURL = "<%= asset_path('splash-image.png') %>"
       window.logoURL = "<%= asset_path('logo.png') %>"
       window.favURL = "<%= asset_path('heart-favorited.png') %>"
-      window.unfavURL = "<%= asset_path('heart-unfavorited.png') %>"
     </script>
   </head>
 
