--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
       window.splashURL = "<%= asset_path('splash-image.png') %>"
       window.logoURL = "<%= asset_path('logo.png') %>"
       window.favURL = "<%= asset_path('heart-favorited.png') %>"
+      window.unfavURL = "<%= asset_path('heart-unfavorited.png') %>"
     </script>
   </head>
 
