--- a/app/assets/stylesheets/favoite.css
+++ b/app/assets/stylesheets/favoite.css
@@ -21,4 +21,21 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   color: #4d4751;
+  margin-bottom: 20px;
+}
+
+
+.no-fav-more-pets {
+  background-color: #6504b5;
+  border-radius: 10px;
+  display: block;
+  line-height: 1.6;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #fff;
+  text-decoration: none;
+  width: 50%;
+  margin: auto;
 }
