--- a/app/assets/stylesheets/favorites.scss
+++ b/app/assets/stylesheets/favorites.scss
@@ -1,3 +1,41 @@
-// Place all the styles related to the Favorites controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.no-favs-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  max-width: 500px;
+  padding: 120px 30px;
+  margin: auto;
+  text-align: center;
+}
+
+.no-fav-header {
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 20px;
+  font-size: 40px;
+  color: #4d4751;
+}
+
+.no-fav-body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  color: #4d4751;
+  margin-bottom: 20px;
+}
+
+
+.no-fav-more-pets {
+  background-color: #6504b5;
+  border-radius: 10px;
+  display: block;
+  line-height: 1.6;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #fff;
+  text-decoration: none;
+  width: 50%;
+  margin: auto;
+}
