--- a/app/assets/stylesheets/post_index.css
+++ b/app/assets/stylesheets/post_index.css
@@ -7,7 +7,15 @@
 
 .post-index-item {
   position: relative;
-  padding: 10px;
+  background-color: white;
+  border-radius: 10px;
+  width: 230px;
+}
+
+.post-index-item-img {
+  width: 100%;
+  height: 230px;
+  border-radius: 10px 10px 0 0;
 }
 
 .index-show-link {
