--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,47 @@
-// Place all the styles related to the Posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.main {
+  overflow: hidden;
+  display: table;
+  table-layout: fixed;
+  width: 100%;
+  height: 100%;
+}
+
+.pet-info-container {
+  border: none;
+  border-radius: 10px;
+  /* background: lightgray; */
+  width: 66.66666%;
+  margin-top: 20px;
+  margin-left: 20px;
+  padding: 30px 30px 20px;
+}
+
+.pet-name {
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 20px;
+  font-size: 40px;
+  color: #4d4751;
+  border-bottom: 1px solid #d2d1d3;
+
+}
+
+.pet-about-container {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  color: #4d4751;
+}
+
+.pet-about {
+  font-size: 14px;
+}
+
+.post-image-container {
+  display: flex;
+  height: 400px;
+  justify-content: center;
+}
+
+.post-image {
+  display: block;
+  width: 50%;
+}
