--- a/app/assets/stylesheets/post_form.scss
+++ b/app/assets/stylesheets/post_form.scss
@@ -25,6 +25,14 @@
   margin-bottom: 5px;
 }
 
+.pet-info-container {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: flex-start;
+}
+
 .post-form-item-options-button {
   border: none;
   box-shadow: 0 1px 3px rgb(77, 71, 81);
@@ -72,4 +80,24 @@
   background-color: #6504b5;
   color: #fff;
   cursor: pointer;
+}
+
+.pet-buttons-container-message {
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #6504b5;
+  margin-bottom: 30px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.post-fav-button {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  color: #6504b5;
 }
