--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -10,6 +10,32 @@
 
 .messages-container {
   padding: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.message-amount {
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+.messages-item-container {
+  border-bottom: 1px solid #ccc;
+}
+
+.message-item-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.message-author-name {
+  color: #314758;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.message-body {
+  color: #314758;
+  font-size: 14px;
 }
 
 .favorite-posts-container-wrap {
