--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,22 +1,25 @@
 .footer-wrapper {
   background-color: #6504b5;
   width: 100%;
+  height: 300px;
 }
 
 .footer-container {
-  padding: 20px;
-  margin: 0 auto;
-  height: 100px;
-  width: 70%;
   display: flex;
-  justify-content: space-between;
+  padding: 40px 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 700;
+  height: 200px;
 }
 
-.footer-links {
-  justify-content: space-between;
-  align-items: center;
+.footer-links-container {
+  border: 1px solid;
+  width: 30%;
+  height: 80%;
 }
 
-.fab {
-  color: white;
+.icon {
+  color: #fff;
 }
