--- a/app/assets/stylesheets/post_index.css
+++ b/app/assets/stylesheets/post_index.css
@@ -53,3 +53,18 @@
   justify-content: center;
 }
 
+.post-show-more-button {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 45px;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: center;
+  border-radius: 23px;
+  background-color: #6504b5;
+  color: #fff;
+  cursor: pointer;
+}
