add splash page css

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
       window.logoURL = "<%= asset_path('logo.png') %>"
       window.favURL = "<%= asset_path('heart-favorited.png') %>"
       window.unfavURL = "<%= asset_path('heart-unfavorited.png') %>"
+      window.pawPrint = "<%= asset_path('paw-print.png') %>"
     </script>
   </head>
 
