--- a/app/assets/stylesheets/post_index.css
+++ b/app/assets/stylesheets/post_index.css
@@ -37,6 +37,7 @@
 .index-item-spacing {
   padding-left: 4px;
   padding-right: 4px;
+  margin-top: -1px;
 }
 
 .post-item {
@@ -56,7 +57,7 @@
 .post-show-more-button {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 30%;
   height: 45px;
   justify-content: center;
   font-family: Arial, Helvetica, sans-serif;
@@ -67,4 +68,5 @@
   background-color: #6504b5;
   color: #fff;
   cursor: pointer;
+  margin-left: 35%;
 }
