--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -155,16 +155,16 @@
 }
 
 .recommendations-post-more {
-  position: relative;
+  position: flex;
+  flex-direction: column;
   border-radius: 10px;
   background-color: #6504b5;
   width: 230px;
   height: 340px;
   margin: 15px;
-  font-family: "Nexa-Heavy", Arial, Helvetica, sans-serif;
-  vertical-align: middle;
+  font-family: Arial, Helvetica, sans-serif;
+  justify-content: center;
   text-align: center;
-  text-transform: uppercase;
   font-size: 14px;
   color: #fff;
   text-decoration: none;
@@ -232,4 +232,22 @@
   margin-left: auto;
   margin-right: auto;
   width: 100%;
+}
+
+.paw-print {
+  width: 100px;
+  height: 100px;
+  color: #fff;
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
+
+.meet-them-line {
+  border-top: 1px solid black;
+  margin-top: 30px;
+}
+.meet-them {
+  font-size: 16px;
+  font-weight: 700;
+  margin-top: 20px;
 }
