--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -1,45 +1,41 @@
-/* .body {
-  display: block;
-  background-color: lightgray;
-  line-height: 1.6;
-  margin: 0;
-  padding: 0;
-  border: 0;
-} */
+.splash-page-container {
 
-.splash-greeting {
-  position: relative;
-  /* max-width: 1220px;
-  text-align: center;
-  margin: 0 auto;
-  padding: 0 15px; */
+}
+
+.splash-greeting-container {
+  // position: relative;
+  display: block;
+  width: 100%;
+}
+
+.splash-greeting-image {
+  width: 100%;
+}
+
+.splash-greeting-text-container {
+  display: flex;
+  flex-direction: column;
 }
 
 .splash-greeting-text1 {
-  top: 200px;
-  line-height: 54px;
   font-size: 45px;
   text-shadow: 0 1px 10px #4d4751, 0 0 4px #4d4751;
-  display: block;
-  position: absolute;
+  // display: block;
+  // position: absolute;
   width: 100%;
   margin: 0;
   padding: 0;
   border: 0;
   text-align: center;
   font-weight: bold;
-  font-family: "Nexa-Bold", Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   color: #fff;
 }
 
 .splash-greeting-text2 {
-  top: 250px;
-  line-height: 30px;
   font-size: 19px;
-  font-family: "Nexa-Bold", "Nexa-Regular", Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   text-shadow: 0 1px 5px #4d4751, 0 0 2px #4d4751, 0 0 1px #4d4751;
-  display: block;
-  position: absolute;
   width: 100%;
   margin: 0;
   padding: 0;
