--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -1,27 +1,32 @@
 .splash-page-container {
-
+  display: flex;
+  flex-direction: column;
 }
 
 .splash-greeting-container {
-  // position: relative;
-  display: block;
+  position: relative;
   width: 100%;
+  height: 500px;
 }
 
 .splash-greeting-image {
+  position: absolute;
   width: 100%;
 }
 
 .splash-greeting-text-container {
+  position: absolute;
   display: flex;
   flex-direction: column;
+  text-align: center;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .splash-greeting-text1 {
   font-size: 45px;
   text-shadow: 0 1px 10px #4d4751, 0 0 4px #4d4751;
-  // display: block;
-  // position: absolute;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -44,13 +49,29 @@
   color: #fff;
 }
 
-.splash-body {
+.splash-greeting-top {
   display: block;
-  line-height: 1.6;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  border: 0;
+  position: inherit;
+  top: 0;
+  width: 100%;
+  height: 55px;
+  background-color: #6504b5;
+}
+
+.splash-greeting-bottom {
+  display: block;
+  position: inherit;
+  bottom: -10px;
+  width: 100%;
+  height: 10px;
+  background-color: #6504b5;
+}
+
+.splash-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .splash-body-text {
@@ -59,29 +80,30 @@
   text-align: center;
   font-size: 40px;
   display: block;
-  font-family: Nexa-Regular, Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 400;
   text-decoration: none;
   text-transform: none;
   margin: 0;
   padding: 0;
   border: 0;
-  /* vertical-align: baseline; */
-  /* margin-block-start: 0.83em;
-  margin-block-end: 0.83em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px; */
+}
+
+.splash-body-2 {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
 }
 
 .splash-body-text2 {
-  display: block;
-  position: relative;
   text-align: center;
-  font-family: "Nexa-Regular", Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   line-height: 1.2;
   font-size: 30px;
   font-weight: 400;
   color: #4d4751;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .recommendations-body {
@@ -97,7 +119,8 @@
 }
 
 .recommendations-posts-container {
-  display: grid;
+  display: grid; 
+  gap: 20px;
   grid-template-columns: auto auto auto auto auto;
   padding: 5px;
 }
@@ -107,7 +130,8 @@
   background-color: white;
   border-radius: 10px;
   width: 230px;
-  margin: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .recommendations-grid {
@@ -157,13 +181,14 @@
   background-color: #6504b5;
   width: 230px;
   height: 340px;
-  margin: 15px;
   font-family: Arial, Helvetica, sans-serif;
   justify-content: center;
   text-align: center;
   font-size: 14px;
   color: #fff;
   text-decoration: none;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .splash-body-text2-content {
@@ -231,17 +256,18 @@
 }
 
 .paw-print {
-  width: 100px;
-  height: 100px;
-  color: #fff;
-  margin-top: 60px;
-  margin-bottom: 30px;
+  width: 80px;
+  height: 80px;
+  fill: #fff;
+  margin-top: 80px;
+  margin-bottom: 50px;
 }
 
 .meet-them-line {
-  border-top: 1px solid black;
-  margin-top: 30px;
+  border-top: 1px solid #2e0152;
+  margin-top: 35px;
 }
+
 .meet-them {
   font-size: 16px;
   font-weight: 700;
