--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -232,11 +232,10 @@
 }
 
 .field-item-name {
-  font-family: "Nexa-Bold", Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   padding: 0;
   border: 0;
   display: block;
-
   text-align: center;
   font-size: 20px;
   font-weight: 400;
@@ -246,12 +245,11 @@
 }
 
 .field-item-body {
-  font-family: "Nexa-Reglar", Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   padding: 0;
   border: 0;
   display: block;
   position: relative;
-
   margin-bottom: 30px;
   text-align: center;
   font-size: 14px;
@@ -286,4 +284,19 @@
   font-size: 16px;
   font-weight: 700;
   margin-top: 20px;
+}
+
+.learn-more-button {
+  display: flex;
+  color: #004c81;
+  font-family: Arial, Helvetica, sans-serif;
+  align-items: center;
+  justify-content: center;
+  text-decoration-line: none;
+  height: 45px;
+  border: 2px solid #20ccf8;
+  border-radius: 23px;
+  margin-left: 110px;
+  margin-right: 110px;
+  font-weight: 700;
 }
