add article pages

--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -296,7 +296,9 @@
   height: 45px;
   border: 2px solid #20ccf8;
   border-radius: 23px;
-  margin-left: 110px;
-  margin-right: 110px;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  margin-left: 115px;
+  margin-right: 115px;
   font-weight: 700;
 }
