add search button on nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       window.favURL = "<%= asset_path('heart-favorited.png') %>"
       window.unfavURL = "<%= asset_path('heart-unfavorited.png') %>"
       window.pawPrint = "<%= asset_path('paw-print.png') %>"
+      window.searchIcon = "<%= asset_path('search-icon.png') %>"
     </script>
   </head>
 
