add footer links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    
+    <script src="https://kit.fontawesome.com/8248b57d3d.js" crossorigin="anonymous"></script>
 
     <script type="text/javascript">
       window.splashURL = "<%= asset_path('splash-image.png') %>"
@@ -17,6 +19,7 @@
       window.pawPrint = "<%= asset_path('paw-print.png') %>"
       window.searchIcon = "<%= asset_path('search-icon.png') %>"
     </script>
+
   </head>
 
   <body id="body">
