--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,25 +1,25 @@
-.footer-wrapper {
+.footer {
+  display: flex;
   background-color: #6504b5;
+  justify-content: space-between;
   width: 100%;
-  height: 300px;
+  height: 130px;
 }
 
-.footer-container {
+.pet-care-link-container {
   display: flex;
-  padding: 40px 50px;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #fff;
-  font-size: 14px;
-  font-weight: 700;
-  height: 200px;
+  width: 30%;
+  align-items: center;
 }
 
 .footer-links-container {
-  border: 1px solid #fff;
+  display: flex;
   width: 30%;
-  height: 80%;
+  align-items: center;
 }
 
-.icon {
+.footer-link {
+  font-size: 48px;
   color: #fff;
+  margin-left: 30px;
 }
