--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -58,7 +58,7 @@
   background-color: #6504b5;
 }
 
-.pet-care-link-container {
+.splash-pet-care-link-container {
   display: flex;
   justify-content: center;
   margin-top: 20px;
