--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -64,7 +64,7 @@
 }
 
 .session-header {
-  font-family: "Nexa Bold", Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   margin-bottom: 20px;
   margin-top: -25px;
