--- a/app/assets/stylesheets/post_form.scss
+++ b/app/assets/stylesheets/post_form.scss
@@ -1,8 +1,11 @@
+.post-form-container {
+  width: 500px;
+}
+
 .post-form-title {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
-  text-transform: uppercase;
   color: #6504b5
 }
 
@@ -11,11 +14,13 @@
   flex-direction: column;
   justify-content: center;
   margin-bottom: 2px;
+  width: 80%;
+  margin-left: 10%;
 }
 
 .post-form-item-title {
   text-align: center;
-  font-family: "Nexa Heavy", Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 600;
@@ -39,9 +44,10 @@
   font-family: "Nexa Bold", Arial, Helvetica, sans-serif;
   display: block;
   height: 55px;
+  width: 100%;
   padding: 0 50px 0 16px;
   border-radius: 5px;
-  background-color: #fff;
+  background-color: rgb(232, 240, 254);
   color: #4d4751;
   cursor: pointer;
   font-size: 16px;
@@ -55,11 +61,10 @@
   box-shadow: 0 1px 3px rgb(77, 71, 81);
   font-family: Arial, Helvetica, sans-serif;
   display: block;
-  width: 75%;
+  width: 100%;
   height: 55px;
-  padding: 0 50px 0 16px;
   border-radius: 5px;
-  background-color: #fff;
+  background-color: rgb(232, 240, 254);
   color: #4d4751;
   cursor: pointer;
   line-height: normal;
