--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -24,6 +24,7 @@
   padding: 0;
   text-align: center;
   text-decoration: inherit;
+  cursor: pointer;
 }
 
 .nav-signup {
@@ -35,6 +36,7 @@
   padding: 0;
   text-align: center;
   text-decoration: inherit;
+  cursor: pointer;
 }
 
 .nav-logout {
@@ -68,6 +70,7 @@
   background: none;
   border: none;
   margin-right: 10px;
+  cursor: pointer;
 }
 
 .nav-search-icon {
