--- a/app/assets/stylesheets/post_index.scss
+++ b/app/assets/stylesheets/post_index.scss
@@ -71,3 +71,11 @@
   margin-left: 35%;
   margin-top: 15px;
 }
+
+.no-pets-found {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 28px;
+  text-align: center;
+  width: 70%;
+  margin-top: 25px;
+}
