--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -14,6 +14,7 @@
 }
 
 .message-amount {
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   margin-bottom: 5px;
 }
@@ -46,7 +47,6 @@
   display: grid;
   gap: 15px;
   grid-template-columns: auto auto auto auto;
-  // padding: 5px;
 }
 
 .favorite-posts-amount {
