--- a/app/assets/stylesheets/filters.scss
+++ b/app/assets/stylesheets/filters.scss
@@ -57,3 +57,13 @@
   cursor: pointer;
   // transition: background-color .1s, border-color .1s, box-shadow .1s, color .15s;
 }
+
+.filter-clear-all {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  color: #6504b5;
+  font-weight: 700;
+  margin-left: 230px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
