--- a/app/assets/stylesheets/post_form.scss
+++ b/app/assets/stylesheets/post_form.scss
@@ -6,7 +6,8 @@
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
-  color: #6504b5
+  color: #6504b5;
+  margin-bottom: 10px;
 }
 
 .post-form-item {
@@ -71,6 +72,19 @@
   text-align: left;
 }
 
+.add-images-container {
+  display: flex;
+}
+.add-images-text {
+  margin-right: 4px;
+}
+
+.add-images-button {
+  height: 20px;
+  border-radius: 23px;
+  background-color: #6504b5;
+}
+
 .post-form-submit-button {
   display: flex;
   flex-direction: column;
@@ -85,6 +99,7 @@
   background-color: #6504b5;
   color: #fff;
   cursor: pointer;
+  margin-top: 10px;
 }
 
 .pet-buttons-container-message {
