--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -138,6 +138,7 @@
 
 .session-form-redirect {
   display: flex;
+  flex-direction: column;
   text-align: center;
   justify-content: center;
   gap: 3px;
@@ -148,9 +149,24 @@
 }
 
 .session-form-redirect-link {
-  color: #6504b5;
-  text-decoration: underline;
+  color: #fff;
+  background-color: #6504b5;
   cursor: pointer;
+  height: 25px;
+  width: 60px;
+  border-radius: 15px;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  line-height: 1.8;
+}
+
+.session-form-redirect-link-container {
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  text-align: center;
 }
 
 .login-form-demo {
@@ -173,4 +189,19 @@
 .session-input-field-title {
   display: inline-block;
   position: absolute;
+}
+
+.session-error-messages {
+  align-items: center;
+  text-align: center;
+  color: red;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.login-error {
+  color: red;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
