--- a/app/assets/stylesheets/post_index.scss
+++ b/app/assets/stylesheets/post_index.scss
@@ -79,3 +79,13 @@
   width: 70%;
   margin-top: 25px;
 }
+
+.post-index-container {
+  padding: 20px 20px 20px 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.filter-container-wrap {
+  width: 30%;
+}
