--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -68,14 +68,13 @@
 }
 
 .nav-fav-button {
-  background: none;
-  border: none;
-  margin-right: 10px;
+  margin-right: 15px;
   cursor: pointer;
+  fill: #6504b5;
+  color: #6504b5;
 }
 
 .nav-search-icon {
   fill: #6504b5;
-  height: 27px;
-  margin-right: 10px;
+  margin-right: 15px;
 }
