post index grid styling

--- a/app/assets/stylesheets/post_index.scss
+++ b/app/assets/stylesheets/post_index.scss
@@ -83,7 +83,8 @@
 .post-index-container {
   padding: 20px 20px 20px 20px;
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
+  gap: 10px;
 }
 
 .filter-container-wrap {
