--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -56,8 +56,14 @@
 .favorite-posts-container-wrap {
   width: 65%;
   margin-bottom: 200px;
-  margin-left: 15%;
-  margin-right: 15%;
+  // margin-left: 15%;
+  // margin-right: 15%;
+}
+
+.favorite-post-container {
+  width: 65%;
+  margin-bottom: 200px;
+  margin-left: 10%;
 }
 
 .user-posts-container-wrap {
