--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,5 +1,7 @@
 .footer {
   display: flex;
+  position: absolute;
+  bottom: 0;
   background-color: #6504b5;
   justify-content: space-between;
   width: 100%;
