--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -12,6 +12,7 @@
 .splash-greeting-image {
   position: absolute;
   width: 100%;
+  // height: 410px;
 }
 
 .splash-greeting-text-container {
@@ -86,16 +87,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 50px;
 }
 
 .splash-body-text {
   color: #6504b5;
-  line-height: 1.2;
+  // line-height: 1.2;
   text-align: center;
   font-size: 40px;
   display: block;
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: 400;
   text-decoration: none;
   text-transform: none;
   margin: 0;
@@ -107,6 +108,7 @@
   background-color: #fff;
   display: flex;
   flex-direction: column;
+  margin-bottom: 130px;
 }
 
 .splash-body-text2 {
