--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -18,12 +18,14 @@
   background-color: #fff;
   border-radius: 15px;
   margin-top: 20px;
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
+  height: 1600px;
   margin-left: 10%;
   margin-right: 10%;
   width: 80%;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
+
 }
 
 .article-category {
