--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,14 @@
       window.pawPrint = "<%= asset_path('paw-print.png') %>"
       window.searchIcon = "<%= asset_path('search-icon.png') %>"
     </script>
+    <meta property="og:title" content="Pet Rehome" />
+    <meta property='og:image' content="<%= image_url('project_pic.png') %>"/>
+    <meta property="og:description"
+      content="A full-stack application inspired by Petfinder where users can make post to rehome a pet and message other users."
+    />
+    <meta property="og:url"
+      content="https://pet-rehome.herokuapp.com/#/"
+    />
 
   </head>
 
