--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Petrehome</title>
+    <title>Pet Rehome</title>
     <%= favicon_link_tag asset_path('favicon.png') %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -19,6 +19,7 @@
       window.pawPrint = "<%= asset_path('paw-print.png') %>"
       window.searchIcon = "<%= asset_path('search-icon.png') %>"
     </script>
+
     <meta property="og:title" content="Pet Rehome" />
     <meta property='og:image' content="<%= image_url('project_pic.png') %>"/>
     <meta property="og:description"
