--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
       content="A full-stack application inspired by Petfinder where users can make post to rehome a pet and message other users."
     />
     <meta property="og:url"
-      content="https://pet-rehome.herokuapp.com/#/"
+      content="https://pet-rehome.herokuapp.com/"
     />
 
   </head>
