update linkedin feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     </script>
 
     <meta property="og:title" content="Pet Rehome" />
-    <meta property='og:image' content="<%= image_url('project_pic.png') %>"/>
+    <meta property="og:image" content="<%= image_url('project_pic.png') %>"/>
     <meta property="og:description"
       content="A full-stack application inspired by Petfinder where users can make post to rehome a pet and message other users."
     />
