--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Pet Rehome</title>
-    <%= favicon_link_tag asset_path('favicon.png') %>
+    <%= favicon_link_tag asset_path("favicon.png") %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -22,7 +22,7 @@
       content="A full-stack application inspired by Petfinder where users can make post to rehome a pet and message other users."
     />
     <meta property="og:url"
-      content="https://pet-rehome.herokuapp.com/"
+      content="https://petrehome.onrender.com/"
     />
 
   </head>
