--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Pet Rehome</title>
-    <%= favicon_link_tag image_path('app/assets/images/favicon.png') %>
+    <%= favicon_link_tag asset_path('favicon.png') %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -12,8 +12,8 @@
     <script src="https://kit.fontawesome.com/8248b57d3d.js" crossorigin="anonymous"></script>
 
     <script type="text/javascript">
-      window.splashURL = "<%= image_path('app/assets/images/splash-image.png') %>"
-      window.logoURL = "<%= image_path('app/assets/images/logo.png') %>"
+      window.splashURL = "<%= asset_path('splash-image.png') %>"
+      window.logoURL = "<%= asset_path('logo.png') %>"
     </script>
 
     <meta property="og:title" content="Pet Rehome" />
