--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Pet Rehome</title>
-    <%= favicon_link_tag asset_path('favicon.png') %>
+    <%# <%= favicon_link_tag asset_path('favicon.png') %> %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
